# Girvan-Newman-Community-Detection

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
data/: input.txt  input_edges.txt  output_communities.txt
src/: Girvan_Newman.cpp  Girvan_Newman.h  main.cpp
